fix main heading white space wrap problem in safari

--- a/src/alefba-src/src/stylesheets/main-section.scss
+++ b/src/alefba-src/src/stylesheets/main-section.scss
@@ -60,6 +60,7 @@
 }
 
 #orange-text {
+    white-space: nowrap;
     color: #ff6200;
     height: 5.555555555555555vh;
     width: 17.96875vw;
